fixed product card alignment

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -955,3 +955,18 @@ button.button--primary.loading .loading-overlay__spinner svg .path {
     min-height: 38px;
   }
 }
+
+.product-info-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.product-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: end;
+}
